tests/ui/const-generics/mgca/type_const-only-in-impl-omitted-type.stderr
error: missing type for `const` item
  --> $DIR/type_const-only-in-impl-omitted-type.rs:11:20
   |
LL |     type const NUM: = 84;
   |                    ^ help: provide a type for the associated constant: `usize`

error: use of trait associated const not defined as `type const`
  --> $DIR/type_const-only-in-impl-omitted-type.rs:16:43
   |
LL | fn accept_bad_tr<const N: usize, T: BadTr<NUM = { N }>>(_x: &T) {}
   |                                           ^^^^^^^^^^^
   |
   = note: the declaration in the trait must begin with `type const` not just `const` alone

error: aborting due to 2 previous errors

